--- a/drive-callback.html
+++ b/drive-callback.html
@@ -1,3 +1,4 @@
+<!-- drive-callback.html  (host at: https://noamaris-eng.github.io/figma-drive-callback/drive-callback.html) -->
 <!doctype html><meta charset="utf-8" />
 <script>
   (function () {
