--- a/drive-callback.html
+++ b/drive-callback.html
@@ -1,41 +1,16 @@
-<!doctype html><meta charset="utf-8" />
-<style>
-  body { font: 14px system-ui, -apple-system, Segoe UI, Roboto, Arial; padding: 24px; line-height:1.5; }
-  code { padding:2px 6px; border:1px solid #888; border-radius:4px; font-weight:600; display:inline-block; }
-  button { padding:6px 10px; margin-left:10px; }
-</style>
+<!doctype html>
+<meta charset="utf-8" />
+<title>Drive OAuth Redirect</title>
 <script>
-  (function () {
-    const p = new URLSearchParams(location.search);
-    const code  = p.get('code');
-    const state = p.get('state');
-    const err   = p.get('error');
-    const desc  = p.get('error_description');
-
-    function render(html){ document.body.innerHTML = html; }
-
-    if (err) {
-      try { window.opener && window.opener.postMessage({ type:'gdrive_oauth_error', error: err, error_description: desc }, '*'); } catch(_) {}
-      render('<h3>Google OAuth Error</h3><div>'+ (err || 'Error') + (desc ? ' — ' + desc : '') +'</div>');
-      return;
-    }
-
-    if (code) {
-      try {
-        if (window.opener) {
-          window.opener.postMessage({ type:'gdrive_oauth_code', code: code, state: state }, '*');
-          window.close();
-          return;
-        }
-      } catch(_) {}
-
-      render(
-        '<h3>Copy this code and paste it into the plugin</h3>' +
-        '<p><code id="c">'+code+'</code> <button onclick="navigator.clipboard.writeText(\''+code+'\')">Copy</button></p>'
-      );
-      return;
-    }
-
-    render('Missing code/state');
+  (function(){
+    try {
+      var h = new URLSearchParams(location.hash.slice(1));
+      var token = h.get('access_token');
+      if (token && window.opener) {
+        window.opener.postMessage({ type:'drive-token', accessToken: token }, '*');
+      }
+    } catch(e){}
+    window.close();
   })();
 </script>
+<body>You can close this window.</body>
