--- a/drive-callback.html
+++ b/drive-callback.html
@@ -1,16 +1,37 @@
 <!doctype html>
 <meta charset="utf-8" />
 <title>Drive OAuth Redirect</title>
+<style>
+  body { font:14px system-ui, -apple-system, Segoe UI, Roboto, Arial; padding:24px; }
+  code { background:#f6f8fa; padding:2px 6px; border-radius:6px; }
+  button { padding:6px 10px; border-radius:6px; border:1px solid #ccc; background:#fff; cursor:pointer; }
+</style>
+<h3>Google Drive Connected</h3>
+<p>If this tab doesn’t close automatically, copy the token below and paste it in the plugin (Paste Token → Save):</p>
+<p>Access Token: <code id="tok">—</code></p>
+<p><button id="copy">Copy token</button></p>
 <script>
   (function(){
+    var token = null;
     try {
       var h = new URLSearchParams(location.hash.slice(1));
-      var token = h.get('access_token');
-      if (token && window.opener) {
-        window.opener.postMessage({ type:'drive-token', accessToken: token }, '*');
+      token = h.get('access_token') || null;
+      if (token) {
+        document.getElementById('tok').textContent = token;
+        if (window.opener) {
+          // Send to plugin UI if allowed
+          window.opener.postMessage({ type:'drive-token', accessToken: token }, '*');
+          // Try to close after a moment (gives time for postMessage)
+          setTimeout(function(){ window.close(); }, 1200);
+        }
+      } else {
+        document.getElementById('tok').textContent = '(missing)';
       }
-    } catch(e){}
-    window.close();
+    } catch(e) {}
+    document.getElementById('copy').onclick = function(){
+      if (!token) return;
+      navigator.clipboard.writeText(token).catch(function(){});
+      alert('Token copied.');
+    };
   })();
 </script>
-<body>You can close this window.</body>
