--- a/drive-callback.html
+++ b/drive-callback.html
@@ -3,35 +3,31 @@
 <title>Drive OAuth Redirect</title>
 <style>
   body { font:14px system-ui, -apple-system, Segoe UI, Roboto, Arial; padding:24px; }
-  code { background:#f6f8fa; padding:2px 6px; border-radius:6px; }
-  button { padding:6px 10px; border-radius:6px; border:1px solid #ccc; background:#fff; cursor:pointer; }
 </style>
-<h3>Google Drive Connected</h3>
-<p>If this tab doesn’t close automatically, copy the token below and paste it in the plugin (Paste Token → Save):</p>
-<p>Access Token: <code id="tok">—</code></p>
-<p><button id="copy">Copy token</button></p>
 <script>
-  (function(){
-    var token = null;
-    try {
-      var h = new URLSearchParams(location.hash.slice(1));
-      token = h.get('access_token') || null;
-      if (token) {
-        document.getElementById('tok').textContent = token;
-        if (window.opener) {
-          // Send to plugin UI if allowed
-          window.opener.postMessage({ type:'drive-token', accessToken: token }, '*');
-          // Try to close after a moment (gives time for postMessage)
-          setTimeout(function(){ window.close(); }, 1200);
-        }
-      } else {
-        document.getElementById('tok').textContent = '(missing)';
-      }
-    } catch(e) {}
-    document.getElementById('copy').onclick = function(){
-      if (!token) return;
-      navigator.clipboard.writeText(token).catch(function(){});
-      alert('Token copied.');
-    };
-  })();
+(function(){
+  var token = null;
+  try {
+    var h = new URLSearchParams(location.hash.slice(1));
+    token = h.get('access_token') || null;
+  } catch(e) {}
+
+  function sendToken(){
+    try { if (window.opener) window.opener.postMessage({ type:'drive-token', accessToken: token }, '*'); } catch(_){}
+    try { if (window.opener && window.opener.parent) window.opener.parent.postMessage({ type:'drive-token', accessToken: token }, '*'); } catch(_){}
+    try { if (window.opener && window.opener.top) window.opener.top.postMessage({ type:'drive-token', accessToken: token }, '*'); } catch(_){}
+  }
+
+  if (token) {
+    // blast a few times in case opener is still loading / sandboxed
+    sendToken();
+    var tries = 0;
+    var t = setInterval(function(){
+      tries++;
+      sendToken();
+      if (tries > 15) { clearInterval(t); try{ window.close(); }catch(_){ } }
+    }, 300);
+  }
+})();
 </script>
+<body>You can close this window.</body>
